--- a/templates/notas/formato_notas.html
+++ b/templates/notas/formato_notas.html
@@ -300,7 +300,7 @@
                                 <th rowspan="2" class="header-bi"><i class="fas fa-chart-line"></i> BI 70%</th>
                                 <th rowspan="2">P.O 30%</th>
                                 <th rowspan="2" class="header-total"><i class="fas fa-award"></i> Total</th>
-                                <th rowspan="2"><i class="fas fa-smile"></i> Actitud</th>
+                                <!-- Columna actitud eliminada -->
                             </tr>
                             <tr>
                                 <th class="header-actividades">Act 1</th>
@@ -366,17 +366,7 @@
                                     <input type="number" step="0.01" class="nota-input nota-calculada total-final" readonly />
                                 </td>
                                 
-                                <!-- Actitud -->
-                                <td>
-                                    <select class="nota-input actitud" style="width: 110px;">
-                                        <option value="">-</option>
-                                        <option value="Excelente" {% if estudiante.notas_existentes and estudiante.notas_existentes.actitud == 'Excelente' %}selected{% endif %}>Excelente</option>
-                                        <option value="Muy Buena" {% if estudiante.notas_existentes and estudiante.notas_existentes.actitud == 'Muy Buena' %}selected{% endif %}>Muy Buena</option>
-                                        <option value="Buena" {% if estudiante.notas_existentes and estudiante.notas_existentes.actitud == 'Buena' %}selected{% endif %}>Buena</option>
-                                        <option value="Regular" {% if estudiante.notas_existentes and estudiante.notas_existentes.actitud == 'Regular' %}selected{% endif %}>Regular</option>
-                                        <option value="Deficiente" {% if estudiante.notas_existentes and estudiante.notas_existentes.actitud == 'Deficiente' %}selected{% endif %}>Deficiente</option>
-                                    </select>
-                                </td>
+                                <!-- Celda actitud eliminada -->
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -406,7 +396,7 @@
 let editMode = false;
 function setModoEdicion(enabled) {
     editMode = enabled;
-    const editables = document.querySelectorAll('.actividad, .nota-rc, .integradora, .prueba-obj, .actitud');
+    const editables = document.querySelectorAll('.actividad, .nota-rc, .integradora, .prueba-obj');
     editables.forEach(inp => { inp.disabled = !enabled; });
     const btnGuardar = document.getElementById('btnGuardar');
     const btnEditar = document.getElementById('btnEditar');
