--- a/templates/dashboards/docente_dashboard.html
+++ b/templates/dashboards/docente_dashboard.html
@@ -28,6 +28,9 @@
                         <a href="{{ url_for('notas.ingresar_notas_ejemplo') }}" class="btn btn-outline-success">
                             <i class="fas fa-clipboard-list"></i> Ver Formato de Notas (Ejemplo)
                         </a>
+                        <a href="{{ url_for('inasistencias_bp.grados') }}" class="btn btn-outline-danger">
+                            <i class="fas fa-calendar-times"></i> Registro de Inasistencias
+                        </a>
                     </div>
                 </div>
             </div>
