modulo de incidentes listo

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,6 +116,11 @@
                   <i class="bi bi-calendar-x"></i><span>Registro de Inasistencias</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('incidentes_bp.grados') }}">
+                  <i class="bi bi-exclamation-triangle"></i><span>Reporte de Incidentes</span>
+                </a>
+              </li>
             </ul>
           </div>
           {% endif %}
