--- a/templates/dashboards/docente_dashboard.html
+++ b/templates/dashboards/docente_dashboard.html
@@ -31,6 +31,9 @@
                         <a href="{{ url_for('inasistencias_bp.grados') }}" class="btn btn-outline-danger">
                             <i class="fas fa-calendar-times"></i> Registro de Inasistencias
                         </a>
+                        <a href="{{ url_for('incidentes_bp.grados') }}" class="btn btn-outline-warning">
+                            <i class="fas fa-exclamation-triangle"></i> Reporte de Incidentes
+                        </a>
                     </div>
                 </div>
             </div>
